# phaselab

./: README.md  supervised_dedup.ipynb
dedup_project/: .gitignore  README.md  main.py  pyproject.toml
dedup_project/app/data/: processor.py
dedup_project/app/embeddings/: encoder.py
dedup_project/app/models/: classifier.py
dedup_project/app/services/: deduplication_service.py
dedup_project/app/utils/: config.py
