[project]
name = "dedup-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annoy>=1.17.3",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ruff>=0.11.4",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
]
